# wlrctl

./: LICENSE  README.md  ascii_raw_keymap.c  keyboard.c  main.c  meson.build  meson_options.txt  output.c  pointer.c  toplevel.c  util.c  wlrctl.1.scd
completions/zsh/: _wlrctl
include/: common.h  keyboard.h  output.h  pointer.h  toplevel.h  util.h
protocol/: meson.build
